...
        view.addSubview(titleLabel)

        let startSwiftUIButton = UIButton()
        startSwiftUIButton.backgroundColor = .systemBlue
        startSwiftUIButton.contentEdgeInsets = UIEdgeInsets.init(top: 10, left: 20, bottom: 10, right: 20)
        startSwiftUIButton.layer.cornerRadius = 8
        startSwiftUIButton.setTitle("Swift UI", for: .normal)
        startSwiftUIButton.sizeToFit()
        startSwiftUIButton.translatesAutoresizingMaskIntoConstraints = false
        startSwiftUIButton.addTarget(self, action: #selector(onSwiftUIPressed), for: .touchUpInside)

        let startUiKitButton = UIButton()
        startUiKitButton.backgroundColor = .systemBlue
        startUiKitButton.contentEdgeInsets = UIEdgeInsets.init(top: 10, left: 20, bottom: 10, right: 20)
        startUiKitButton.layer.cornerRadius = 8
        startUiKitButton.setTitle("UI Kit", for: .normal)
        startUiKitButton.sizeToFit()
        startUiKitButton.translatesAutoresizingMaskIntoConstraints = false
        startUiKitButton.addTarget(self, action: #selector(onUIKitPressed), for: .touchUpInside)

        let stackView = UIStackView(arrangedSubviews: [startSwiftUIButton,
                                                       startUiKitButton])
...
