...
            case .tokenUrl:
                TextField("ACS Token URL", text: $viewModel.envConfigSubject.acsTokenUrl)
                    .disableAutocorrection(true)
                    .autocapitalization(.none)
                    .textFieldStyle(.roundedBorder)
            case .token:
                TextField("ACS Token", text:
                            !viewModel.envConfigSubject.useExpiredToken ?
                          $viewModel.envConfigSubject.acsToken : $viewModel.envConfigSubject.expiredAcsToken)
                .modifier(TextFieldClearButton(text: $viewModel.envConfigSubject.acsToken))
                .disableAutocorrection(true)
                .autocapitalization(.none)
                .textFieldStyle(.roundedBorder)
...
        }
        .padding(.vertical, verticalPadding)
        .padding(.horizontal, horizontalPadding)
    }

    var startExperienceButton: some View {
        Button("Start Experience") {
            viewModel.startExperience()
        }
        .buttonStyle(DemoButtonStyle())
        .disabled(viewModel.isStartExperienceDisabled || viewModel.isStartExperienceLoading)
        .accessibility(identifier: AccessibilityId.startExperienceAccessibilityID.rawValue)
    }
...
