...
"AzureCommunicationUI.AudioDevice.DeviceDrawer.Headphones"="Headphones";
"AzureCommunicationUI.AudioDevice.DeviceDrawer.Bluetooth"="Bluetooth";

/* SetupView */
"AzureCommunicationUI.SetupView.Title"="Setup";
"AzureCommunicationUI.SetupView.Button.Dismiss.AccessibilityLabel"="Back";
"AzureCommunicationUI.SetupView.Button.JoinCall"="Join call";
"AzureCommunicationUI.SetupView.Button.JoiningCall"="Joining calling...";
"AzureCommunicationUI.SetupView.Button.VideoOff"="Video off";
"AzureCommunicationUI.SetupView.Button.VideoOff.AccessibilityLabel"="Turn Camera On";
"AzureCommunicationUI.SetupView.Button.VideoOn"="Video on";
"AzureCommunicationUI.SetupView.Button.VideoOn.AccessibilityLabel"="Turn Camera Off";
"AzureCommunicationUI.SetupView.Button.MicOff"="Mic off";
...

"AzureCommunicationUI.CallingView.OnePersonJoined"="%@ joined the meeting";
"AzureCommunicationUI.CallingView.MutiplePeopleJoined"="%d participants joined the meeting";
"AzureCommunicationUI.CallingView.OnePersonLeft"="%@ left the meeting";
"AzureCommunicationUI.CallingView.MutiplePeopleLeft"="%d participants left the meeting";

"AzureCommunicationUI.CallingView.Overlay.LeaveCall"="Leave";
"AzureCommunicationUI.CallingView.Overlay.Cancel"="Cancel";
"AzureCommunicationUI.CallingView.LeaveCallList.Header.LeaveCall"="Leave call?";

/* ComplianceBanner title */
"AzureCommunicationUI.CallingView.BannerTitle.RecordingAndTranscribingStarted"="Recording and transcription have started.";
"AzureCommunicationUI.CallingView.BannerTitle.RecordingStarted"="Recording has started.";
...
